Revert "Fix bad merge"
This reverts commit 0480cdd0fd5b947f8d96d138ad703fb8ab5dcfe3.