@@ -12,6 +12,193 @@
         <test.argline />
       </properties>
     </profile>
+    <profile>
+      <id>jdk8</id>
+      <activation>
+        <jdk>(,1.8]</jdk>
+      </activation>
+      <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+      </properties>
+      <dependencies>
+        <dependency>
+          <groupId>org.testng</groupId>
+          <artifactId>testng</artifactId>
+          <version>6.14.3</version>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+          <version>1.7.26</version>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-slf4j-impl</artifactId>
+          <version>2.11.2</version>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <!-- Overrides transitive dep on 5.2.1 -->
+          <groupId>net.sf.proguard</groupId>
+          <artifactId>proguard-base</artifactId>
+          <version>${proguard.version}</version>
+          <scope>runtime</scope>
+        </dependency>
+      </dependencies>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <version>2.22.1</version>
+              <configuration>
+                <argLine>@{argLine} ${test.jdk8.argline}</argLine>
+              </configuration>
+            </plugin>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-failsafe-plugin</artifactId>
+              <version>2.22.1</version>
+              <configuration>
+                <argLine>@{argLine} ${test.jdk8.argline}</argLine>
+              </configuration>
+              <executions>
+                <execution>
+                  <!-- Check that Proguard isn't breaking anything -->
+                  <id>test</id>
+                  <phase>integration-test</phase>
+                  <goals>
+                    <goal>integration-test</goal>
+                  </goals>
+                </execution>
+              </executions>
+            </plugin>
+            <plugin>
+              <groupId>com.github.wvengen</groupId>
+              <artifactId>proguard-maven-plugin</artifactId>
+              <version>2.0.14</version>
+              <configuration>
+                <proguardJar>${user.home}/.m2/repository/net/sf/proguard/proguard-base/${proguard.version}/proguard-base-${proguard.version}.jar
+                </proguardJar>
+                <proguardInclude>${basedir}/proguard.conf</proguardInclude>
+                <libs>
+                  <lib>${java.home}/lib/rt.jar</lib>
+                  <lib>${java.home}/lib/jce.jar</lib>
+                </libs>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+        <plugins>
+          <plugin>
+            <groupId>com.github.wvengen</groupId>
+            <artifactId>proguard-maven-plugin</artifactId>
+            <version>2.0.14</version>
+            <executions>
+              <execution>
+                <id>proguard</id>
+                <!-- Work around lack of a post-package phase (proguard requires existing jar -->
+                <phase>pre-integration-test</phase>
+                <goals>
+                  <goal>proguard</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>jdk9</id>
+      <activation>
+        <jdk>[9.0,)</jdk>
+      </activation>
+      <properties>
+        <maven.compiler.source>1.9</maven.compiler.source>
+        <maven.compiler.target>1.9</maven.compiler.target>
+      </properties>
+      <dependencies>
+        <dependency>
+          <groupId>org.testng</groupId>
+          <artifactId>testng</artifactId>
+          <version>7.0.0-beta1</version>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-slf4j18-impl</artifactId>
+          <version>2.11.2</version>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+          <version>1.7.26</version>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.pitest</groupId>
+            <artifactId>pitest-maven</artifactId>
+            <version>${pitest.version}</version>
+            <configuration>
+              <jvmArgs>
+                <value>-Djava.security.egd=file:/dev/./urandom</value>
+                <value>--add-opens</value>
+                <value>java.xml/jdk.xml.internal=ALL-UNNAMED</value>
+              </jvmArgs>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>pit</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.pitest</groupId>
+            <artifactId>pitest-maven</artifactId>
+            <version>${pitest.version}</version>
+            <configuration>
+              <threads>4</threads>
+              <coverageThreshold>85</coverageThreshold>
+              <mutationThreshold>75</mutationThreshold>
+              <!-- AesCounterRandom excluded due to https://github.com/hcoles/pitest/issues/504 -->
+              <excludedClasses>
+                <excludedClass>io.github.pr0methean.betterrandom.prng.AesCounterRandom</excludedClass>
+              </excludedClasses>
+              <avoidCallsTo>
+                <avoidCallsTo>org.slf4j</avoidCallsTo>
+              </avoidCallsTo>
+              <timeoutFactor>2</timeoutFactor>
+              <timeoutConstant>4000</timeoutConstant>
+              <testPlugin>testng</testPlugin>
+              <failWhenNoMutations>true</failWhenNoMutations>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+      <dependencies>
+        <dependency>
+          <groupId>org.testng</groupId>
+          <artifactId>testng</artifactId>
+          <version>6.14.3</version>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <!-- Needed to override a transitive dep in Powermock that breaks Pitest -->
+          <groupId>org.javassist</groupId>
+          <artifactId>javassist</artifactId>
+          <version>3.22.0-GA</version>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
+    </profile>
     <!-- GPG Signature on release -->
     <profile>
       <id>release-sign-artifacts</id>
@@ -106,26 +293,26 @@
   </profiles>
   <packaging>jar</packaging>
   <properties>
+    <argLine />
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <argLine /><!-- see https://github.com/metasfresh/metasfresh-parent/commit/bdbe20d51a6936ccc11581b6702fc21a6663ce0f -->
     <prefix />
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
     <github.global.server>github</github.global.server>
     <jsr305.version>3.0.2</jsr305.version>
-    <guava.version>27.0.1-android</guava.version>
-    <proguard.version>5.3.3</proguard.version>
+    <guava.version>27.0.1-jre</guava.version>
+    <proguard.version>6.0.3</proguard.version>
     <jacoco.version>0.8.3</jacoco.version>
-    <powermock.version>2.0.0-beta.5</powermock.version>
+    <powermock.version>2.0.0</powermock.version>
     <mockito.version>2.25.0</mockito.version>
-    <pitest.version>1.3.2</pitest.version>
+    <pitest.version>1.4.6</pitest.version>
     <test.argline>-Djava.security.egd=file:/dev/./urandom</test.argline>
+    <test.jdk8.argline>${test.argline}</test.jdk8.argline>
+    <test.jdk9.argline>${test.argline} --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED</test.jdk9.argline>
     <testng.parallel>tests</testng.parallel>
     <testng.perCoreThreadCount>1</testng.perCoreThreadCount>
     <testng.verbose>1</testng.verbose>
   </properties>
   <groupId>io.github.pr0methean.betterrandom</groupId>
-  <artifactId>BetterRandom-Java7</artifactId>
+  <artifactId>BetterRandom</artifactId>
   <version>3.0.4-SNAPSHOT</version>
   <name>BetterRandom</name>
   <description>Better, faster random-number generation in Java.
@@ -162,41 +349,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>net.sourceforge.streamsupport</groupId>
-      <artifactId>streamsupport</artifactId>
-      <version>1.7.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>1.7.26</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-slf4j-impl</artifactId>
-      <version>2.11.2</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>com.googlecode.json-simple</groupId>
       <artifactId>json-simple</artifactId>
       <version>1.1.1</version>
-    </dependency>
-    <dependency>
-      <groupId>net.sourceforge.streamsupport</groupId>
-      <artifactId>streamsupport</artifactId>
-      <version>1.7.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>1.7.26</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-slf4j-impl</artifactId>
-      <version>2.11.2</version>
-      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
@@ -253,21 +408,6 @@
       <version>2.8.2</version>
       <type>maven-plugin</type>
     </dependency>
-    <dependency>
-      <!-- Overrides transitive dep on 5.2.1 -->
-      <groupId>net.sf.proguard</groupId>
-      <artifactId>proguard-base</artifactId>
-      <version>${proguard.version}</version>
-      <scope>runtime</scope>
-    </dependency>
-    <dependency>
-      <!-- https://www.eclemma.org/jacoco/trunk/doc/examples/build/pom-offline.xml -->
-      <groupId>org.jacoco</groupId>
-      <artifactId>org.jacoco.agent</artifactId>
-      <classifier>runtime</classifier>
-      <version>${jacoco.version}</version>
-      <scope>test</scope>
-    </dependency>
   </dependencies>
   <build>
     <resources>
@@ -282,31 +422,7 @@
     </resources>
     <pluginManagement>
       <plugins>
-        <plugin>
-          <groupId>com.github.wvengen</groupId>
-          <artifactId>proguard-maven-plugin</artifactId>
-          <version>2.0.14</version>
-          <executions>
-            <execution>
-              <id>proguard</id>
-              <!-- Work around lack of a post-package phase (proguard requires existing jar -->
-              <phase>pre-integration-test</phase>
-              <goals>
-                <goal>proguard</goal>
-              </goals>
-            </execution>
-          </executions>
-          <configuration>
-            <proguardJar>
-              ${user.home}/.m2/repository/net/sf/proguard/proguard-base/${proguard.version}/proguard-base-${proguard.version}.jar
-            </proguardJar>
-            <proguardInclude>${basedir}/proguard.conf</proguardInclude>
-            <libs>
-              <lib>${java.home}/lib/rt.jar</lib>
-              <lib>${java.home}/lib/jce.jar</lib>
-            </libs>
-          </configuration>
-        </plugin>
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
@@ -319,10 +435,7 @@
               <![CDATA[
               © {currentYear} Chris Hennick. Free to use under the <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>. <a href="/privacy policy.html">Privacy Policy</a>]]></bottom>
             <sourcepath>${user.home}/j2se-src:${basedir}/src/main/java</sourcepath>
-            <javadocVersion>1.8.0</javadocVersion>
-            <notimestamp>true</notimestamp>
             <subpackages>io.github.pr0methean</subpackages>
-            <show>protected</show>
             <links>
               <link>http://checkstyle-addons.github.io/jsr305-javadoc/3.0.1</link>
               <link>https://checkerframework.org/api</link>
@@ -336,7 +449,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
           <configuration>
-            <argLine>@{argLine} @{test.argline}</argLine>
+            <argLine>@{argLine} ${test.jdk9.argline}</argLine>
             <suiteXmlFiles>
               <suiteXmlFile>src/test/testng.xml</suiteXmlFile>
               <suiteXmlFile>src/test/testng-sequential.xml</suiteXmlFile>
@@ -360,7 +473,7 @@
           <artifactId>maven-failsafe-plugin</artifactId>
           <version>2.22.1</version>
           <configuration>
-            <argLine>@{argLine} @{test.argline}</argLine>
+            <argLine>@{argLine} ${test.jdk9.argline}</argLine>
             <suiteXmlFiles>
               <suiteXmlFile>src/test/testng.xml</suiteXmlFile>
               <suiteXmlFile>src/test/testng-sequential.xml</suiteXmlFile>
@@ -422,8 +535,6 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
           <configuration>
-            <source>1.7</source>
-            <target>1.7</target>
             <staleMillis>3600000</staleMillis>
             <fork>true</fork>
             <compilerArguments>
@@ -538,6 +649,14 @@
               <artifactId>maven-scm-provider-gitexe</artifactId>
               <version>1.11.1</version>
             </dependency>
+            <dependency>
+              <!-- https://www.eclemma.org/jacoco/trunk/doc/examples/build/pom-offline.xml -->
+              <groupId>org.jacoco</groupId>
+              <artifactId>org.jacoco.agent</artifactId>
+              <classifier>runtime</classifier>
+              <version>${jacoco.version}</version>
+              <scope>test</scope>
+            </dependency>
           </dependencies>
           <configuration>
             <stagingRepositoryId/>
@@ -570,26 +689,6 @@
     </pluginManagement>
     <plugins>
       <plugin>
-        <groupId>org.pitest</groupId>
-        <artifactId>pitest-maven</artifactId>
-        <version>${pitest.version}</version>
-        <configuration>
-          <threads>4</threads>
-          <coverageThreshold>85</coverageThreshold>
-          <mutationThreshold>75</mutationThreshold>
-          <!-- AesCounterRandom excluded due to https://github.com/hcoles/pitest/issues/504 -->
-          <excludedClasses>io.github.pr0methean.betterrandom.prng.AesCounterRandom</excludedClasses>
-          <avoidCallsTo>
-            <avoidCallsTo>org.slf4j</avoidCallsTo>
-          </avoidCallsTo>
-          <timeoutFactor>1.5</timeoutFactor>
-          <timeoutConstant>3000</timeoutConstant>
-          <testPlugin>testng</testPlugin>
-          <mutateStaticInitializers>true</mutateStaticInitializers>
-          <failWhenNoMutations>true</failWhenNoMutations>
-        </configuration>
-      </plugin>
-      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
         <version>3.0.0-M2</version>
@@ -606,19 +705,6 @@
                 </requireMavenVersion>
               </rules>
             </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>com.github.wvengen</groupId>
-        <artifactId>proguard-maven-plugin</artifactId>
-        <version>2.0.14</version>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>proguard</goal>
-            </goals>
           </execution>
         </executions>
       </plugin>
